Make sure the search submit button doesn't break into two lines

--- a/less/components/search-form.less
+++ b/less/components/search-form.less
@@ -7,7 +7,7 @@
 	display: flex;
 
 	> label {
-		flex: 4; // take up 4 columns
+		flex: 1; // take up all available space
 		display: inline-block;
 		margin: 0;
 		position: relative;
@@ -32,7 +32,6 @@
 	}
 
 	.search-submit {
-		flex: 1; // take up 1 column
 		margin-left: 5px;
 	}
 
